--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <!-- Playlist -->
         <div class="playlist"></div>
     </div>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="music/style.css">
 </head>
 <body>
-<script src="app.js"></script>
+<script src="music/app.js"></script>
 </body>
 </html>
