--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
           crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
     <div class="player">
         <!-- Dashboard -->
         <div class="dashboard">
             <!-- Header -->
             <header>
                 <div class="header">
-                    <i class="fas fa-bars"></i>
+                   <div class="add"> <i class="fas fa-folder-plus" style="color: #ec1f55"></i></div>
                     <span>Now playing:</span>
-                    <i class="fas fa-headset"></i>
+                    <i class="fas fa-headset" style="color: #ec1f55"></i>
                 </div>
                 <h2>String 57th & 9th</h2>
             </header>
@@ -48,7 +47,8 @@
                     <i class="fas fa-random"></i>
                 </div>
             </div>
-            <div class="progressArea"><input id="progress" class="progress" type="range" value="0" step="1" min="0" max="100"></div>
+            <div class="progressArea"><input id="progress" class="progress" type="range" value="0" step="1" min="0"
+                                             max="100"></div>
             <div class="timer">
                 <span class="current">0:00</span>
                 <span class="duration">3:40</span>
